PROJECT(osgStudy)

CMAKE_MINIMUM_REQUIRED(VERSION 3.0.0)
SET(CMAKE_DEBUG_POSTFIX "d" CACHE STRING "add a postfix for Debug mode, usually d on windows")

# 设置工作目录，用于调试
#set_target_properties(MyTarget PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}/bin")

# 目录组织结构
set_property(GLOBAL PROPERTY USE_FOLDERS On)
#只在在“解决方案资源管理器”将项目放到abc目录下，不起其他任何作用
#SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES FOLDER "abc") 

IF(COMMAND CMAKE_POLICY)
    CMAKE_POLICY(SET CMP0003 NEW)
ENDIF(COMMAND CMAKE_POLICY)

INCLUDE(CheckIncludeFiles)
FIND_PATH(OPENSCENEGRAPH_INCLUDE_DIR osg/Referenced
    PATHS
    $ENV{OSG_ROOT}/include
    $ENV{OSG_DIR}/include
)
FIND_PATH(OPENSCENEGRAPH_LIB_DIR osg.lib
    PATHS
    $ENV{OSG_ROOT}/lib
    $ENV{OSG_DIR}/lib
)
INCLUDE_DIRECTORIES(${OPENSCENEGRAPH_INCLUDE_DIR})
LINK_DIRECTORIES(${OPENSCENEGRAPH_LIB_DIR})

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_INSTALL_PREFIX}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_INSTALL_PREFIX}/lib)
LINK_DIRECTORIES(${CMAKE_LIBRARY_OUTPUT_DIRECTORY})

MACRO(START_EXAMPLE)
    INCLUDE_DIRECTORIES(${EXTERNAL_INCLUDE_DIR})
    ADD_EXECUTABLE(${EXAMPLE_NAME} ${EXAMPLE_FILES})
    SET_TARGET_PROPERTIES(${EXAMPLE_NAME} PROPERTIES DEBUG_POSTFIX "${CMAKE_DEBUG_POSTFIX}")
    set_target_properties(${EXAMPLE_NAME} PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_INSTALL_PREFIX}/bin/Debug")
    TARGET_LINK_LIBRARIES(${EXAMPLE_NAME}
        debug osg${CMAKE_DEBUG_POSTFIX}          optimized osg
        debug osgAnimation${CMAKE_DEBUG_POSTFIX} optimized osgAnimation
        debug osgParticle${CMAKE_DEBUG_POSTFIX}  optimized osgParticle
        debug osgDB${CMAKE_DEBUG_POSTFIX}        optimized osgDB
        debug osgGA${CMAKE_DEBUG_POSTFIX}        optimized osgGA
        debug osgText${CMAKE_DEBUG_POSTFIX}      optimized osgText
        debug osgSim${CMAKE_DEBUG_POSTFIX}       optimized osgSim
		debug osgFX${CMAKE_DEBUG_POSTFIX}       optimized osgFX
		debug osgUtil${CMAKE_DEBUG_POSTFIX}      optimized osgUtil
        debug osgViewer${CMAKE_DEBUG_POSTFIX}    optimized osgViewer
        debug OpenThreads${CMAKE_DEBUG_POSTFIX}  optimized OpenThreads
        ${EXTERNAL_LIBRARIES}
    )
    INSTALL(TARGETS ${EXAMPLE_NAME} RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
ENDMACRO(START_EXAMPLE)

OPTION(BUILD_OSG_TUTORIALS "Enable to build NPS Tutorials" ON)
IF   (BUILD_OSG_TUTORIALS)
	ADD_SUBDIRECTORY(tutorial)
ENDIF()

OPTION(BUILD_OSG_EXAMPLES "Enable to build others examples(most copy)" ON)
IF   (BUILD_OSG_EXAMPLES)
	ADD_SUBDIRECTORY(examples)
ENDIF()

OPTION(BUILD_OSG_TESTS "Enable to build NPS Tutorials" ON)
IF   (BUILD_OSG_TESTS)
	ADD_SUBDIRECTORY(tests)
ENDIF()

OPTION(BUILD_OSG_3RDPARTY "Enable to build with 3rdParty library" ON)
IF   (BUILD_OSG_3RDPARTY)
	ADD_SUBDIRECTORY(3rdParty)
ENDIF()

OPTION(BUILD_OSG_MODELING "Enable to build with modeling" ON)
IF   (BUILD_OSG_MODELING)
	ADD_SUBDIRECTORY(AppModeling)
ENDIF()