# examples
ADD_SUBDIRECTORY(hudText)
ADD_SUBDIRECTORY(hudSingle)
ADD_SUBDIRECTORY(hudMulti)
ADD_SUBDIRECTORY(01navigator)
ADD_SUBDIRECTORY(02navigator)
ADD_SUBDIRECTORY(switchManipulators)
ADD_SUBDIRECTORY(panorama) #全景图
ADD_SUBDIRECTORY(glsl20)
ADD_SUBDIRECTORY(glsl43)
ADD_SUBDIRECTORY(glsldemo1)
ADD_SUBDIRECTORY(glslTexture)