# nps tutorials
ADD_SUBDIRECTORY(02)
ADD_SUBDIRECTORY(03)
ADD_SUBDIRECTORY(04)
ADD_SUBDIRECTORY(05)
ADD_SUBDIRECTORY(06)
ADD_SUBDIRECTORY(07)
ADD_SUBDIRECTORY(08)
ADD_SUBDIRECTORY(09)
ADD_SUBDIRECTORY(10)
ADD_SUBDIRECTORY(11a)
ADD_SUBDIRECTORY(11b)
ADD_SUBDIRECTORY(11c)
ADD_SUBDIRECTORY(12)
ADD_SUBDIRECTORY(13)
ADD_SUBDIRECTORY(14a)
ADD_SUBDIRECTORY(14b)
ADD_SUBDIRECTORY(14c)
ADD_SUBDIRECTORY(15)
ADD_SUBDIRECTORY(16)
ADD_SUBDIRECTORY(17)