SET(EXAMPLE_NAME osgmodelingboolean)
SET(EXAMPLE_FILES
    osgmodelingboolean.cpp
)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include/)
LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/AppModeling/modeling)

ADD_EXECUTABLE(${EXAMPLE_NAME} ${EXAMPLE_FILES})
SET_TARGET_PROPERTIES(${EXAMPLE_NAME} PROPERTIES PROJECT_LABEL "${EXAMPLE_NAME}")
SET_TARGET_PROPERTIES(${EXAMPLE_NAME} PROPERTIES DEBUG_POSTFIX "${CMAKE_DEBUG_POSTFIX}")
SET_TARGET_PROPERTIES(${EXAMPLE_NAME} PROPERTIES OUTPUT_NAME ${EXAMPLE_NAME})

TARGET_LINK_LIBRARIES(${EXAMPLE_NAME}
    debug osg${CMAKE_DEBUG_POSTFIX}         optimized osg
    debug osgUtil${CMAKE_DEBUG_POSTFIX}     optimized osgUtil
    debug osgViewer${CMAKE_DEBUG_POSTFIX}   optimized osgViewer
    debug osgText${CMAKE_DEBUG_POSTFIX}     optimized osgText
    debug osgDB${CMAKE_DEBUG_POSTFIX}       optimized osgDB
    debug osgGA${CMAKE_DEBUG_POSTFIX}       optimized osgGA
    debug OpenThreads${CMAKE_DEBUG_POSTFIX} optimized OpenThreads
    debug osgModeling${CMAKE_DEBUG_POSTFIX} optimized osgModeling
)
IF(MSVC)
	SET_TARGET_PROPERTIES(${EXAMPLE_NAME} PROPERTIES FOLDER "AppModeling")
ENDIF()